# Llama-LibTorch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: main.cpp
source/llama/private/: llama_attn.cpp  llama_causal_lm.cpp  llama_decoder_lay.cpp  llama_mlp.cpp  llama_model.cpp  llama_rms.cpp  llama_utils.cpp  rotary_embed.cpp
source/llama/public/: llama_attn.h  llama_causal_lm.h  llama_config.h  llama_decoder_lay.h  llama_mlp.h  llama_model.h  llama_rms.h  llama_utils.h  rotary_embed.h
